tests/test171.rael.exp
module(:Math)
3.1415926535897931
[cfunc 'Cos' for 1 arguments] [cfunc 'Sin' for 1 arguments] [cfunc 'Tan' for 1 arguments] [cfunc 'ASin' for 1 arguments] [cfunc 'ATan' for 1 arguments] [cfunc 'ACos' for 1 arguments] [cfunc 'Log10' for 1 arguments] [cfunc 'Log2' for 1 arguments] [cfunc 'Floor' for 1 arguments] [cfunc 'Ceil' for 1 arguments]
2
Void
String Number 0 to 9
Error [tests/test171.rael:13:17]: Expected a number
| log :Math:Floor("string")
|                 ^
